<resources>
    <string name="app_name">BusExplorer</string>

    // Unsorted strings
    <string name="list_bottom_default">Open List</string>
    <string name="hello_world">Hello World!</string>
    <string name="description_zoom_touch_close">Expanded image (touch to close)</string>

    // Activity Titles
    <string name="title_activity_detail_view">DetailView</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    // Actions
    <string name="action_testcallapi">TestCallAPI</string>
    <string name="action_detailview">DetailView</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>

    // Strings in MainActivity
    <string name="main_refreshNoConn">No internet connection found... Yet!</string>
    <string name="main_refreshYesConn">Detected an internet connection!</string>
    <string name="main_refreshButton">Refresh</string>

    <string name="main_title_noWifi">Just letting you know...</string>
    <string name="main_text_noWifi">The ElectriCity buses provide free WiFi!</string>

    <string name="main_title_noConn">No network found!</string>
    <string name="main_text_noConn">Could not detect an internet connection!
        An internet connection is required to use BusExplorer</string>

    <string name="main_tomap">Back to the map</string>
    <string name="main_categories">Categories</string>

    <string name="main_cancel">Cancel</string>
    <string name="main_exit">Exit</string>
    <string name="main_wanttoexit">Do you really want to exit ?</string>
    <string name="main_ok">Ok</string>

    // Strings in AboutActivity
    <string name="about_aboutHeader">About BusExplorer</string>
    <string name="about_aboutText">BusExplorer is an app created for the ElectriCity Innovation Challenge.
    It is designed to make the bus trip more fun for both tourists and locals
    by showing the user all the exciting sights around the bus route.</string>
    <string name="about_licenseHeader">License</string>
    <string name="about_licenseText">Icon made by www.flaticon.com/authors/daniel-bruce from flaticon.com and freepik.com/ from flaticon.com </string>
    <string name="about_usHeader">About Us</string>
    <string name="about_usText">BusExplorer was created by 5 students from Chalmers University of Technology
    and University of Gothenburg as a software engineering project.</string>
    <string name="version">Version 1.0.0</string>
    /*
    A normal version number MUST take the form X.Y.Z where X, Y, and Z are non-negative integers,
    and MUST NOT contain leading zeroes. X is the major version, Y is the minor version, and Z is the patch version.
    Each element MUST increase numerically. For instance: 1.9.0 -> 1.10.0 -> 1.11.0.

    Once a versioned package has been released, the contents of that version MUST NOT be modified.
    Any modifications MUST be released as a new version.
    */
    // Strings in SettingsActivity
    <string name="settings_optSightseeing">Sightseeing</string>
    <string name="settings_optStores">Shopping</string>
    <string name="settings_optBars">Bars</string>
    <string name="settings_filterHeader">Filter Map</string>

    // Strings in NavigationDrawer
    <string name="openDrawer">Navigation View</string>
    <string name="closeDrawer">Navigation View Closed</string>
    <string name="favorites">Favorites</string>

    // Strings in Toolbar (buttons)
    <string name="refreshButton">Refresh</string>

    // String in DetailActivity
    <string name="dv_click_free_entry">Click here to get free entry!</string>
    <string name="dv_show_for_free_entry">Show this code to get free entry at</string>
    <string name="close">Close</string>
    <string name="dv_popupheader">Thank you for using bus 55!</string>

    // Usage unknown
    <string name="app_settings">Settings</string>

</resources>
