<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/navdrawer_menutop"
        android:checkableBehavior="none">
        <item
            android:id="@+id/navdrawer_map"
            android:checked="false"
            android:icon="@drawable/googlemaps"
            android:title="@string/main_tomap" />
        <item
            android:id="@+id/navdrawer_favorites"
            android:checked="false"
            android:icon="@drawable/star_filled"
            android:title="@string/favorites" />
        <item android:title="@string/main_categories">
            <menu>
                <item
                    android:id="@+id/navdrawer_category_1"
                    android:checked="false"
                    android:icon="@drawable/ic_local_see_black_48dp"
                    android:title="@string/settings_optSightseeing" />
                <item
                    android:id="@+id/navdrawer_category_2"
                    android:checked="false"
                    android:icon="@drawable/ic_local_mall_black_48dp"
                    android:title="@string/settings_optStores" />
                <item
                    android:id="@+id/navdrawer_category_3"
                    android:checked="false"
                    android:icon="@drawable/ic_restaurant_menu_black_48dp"
                    android:title="@string/settings_optBars" />
            </menu>
        </item>
    </group>

    <group
        android:id="@+id/navdrawer_menubottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/navdrawer_about"
            android:checked="false"
            android:icon="@drawable/ic_info"
            android:title="@string/about_aboutHeader" />
    </group>
</menu>
